--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "typescript": "^5.3.0",
     "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "pitchy": "^4.1.0"
   }
 }
