--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.22.0",
+    "essentia.js": "^0.1.3",
     "pitchy": "^4.1.0"
   }
 }
